@@ -29,7 +29,6 @@ import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -62,122 +61,110 @@ class TrainerInfoRepositoryTest {
 	@Test
 	void saveTrainerInfo() {
 		Member user = new Member(
-			"hello",
-			"Test User",
-			"testuser@example.com",
-			"Y",
-			"",
-			ProviderType.KAKAO,
-			RoleType.USER,
-			LocalDateTime.now(),
-			LocalDateTime.now()
+				"hello",
+				"Test User",
+				"testuser@example.com",
+				"Y",
+				"",
+				ProviderType.KAKAO,
+				RoleType.USER,
+				LocalDateTime.now(),
+				LocalDateTime.now()
 		);
 		userRepository.saveAndFlush(user);
 
 		// GymDto 객체 생성
 		GymDto gymDto = new GymDto("Fitness Center", "123 Main St, Anytown, USA");
 
-		// GoalType 리스트 생성 (예시로 문자열로 대체)
+		// GoalType 리스트 생성
 		List<GoalType> goalTypes = List.of(GoalType.WEIGHT_LOSS, GoalType.MUSCLE_GAIN);
 
-		// QualificationDto 리스트 생성
-		List<TrainerRequest.QualificationDto> qualificationDtoList = new ArrayList<>();
-		qualificationDtoList.add(new TrainerRequest.QualificationDto(
-			"Certified Personal Trainer",
-			QualificationCategory.CERTIFICATION,
-			LocalDate.of(2023, 1, 1),
-			LocalDate.of(2024, 1, 1),
-			"Nationally recognized certification."
-		));
-		qualificationDtoList.add(new TrainerRequest.QualificationDto(
-			"Nutrition Specialist",
-			QualificationCategory.CERTIFICATION,
-			LocalDate.of(2022, 5, 1),
-			LocalDate.of(2023, 5, 1),
-			"Specialized in sports nutrition."
-		));
+		// 단일 QualificationDto 객체 생성
+		TrainerRequest.QualificationDto qualificationDto = new TrainerRequest.QualificationDto(
+				"Certified Personal Trainer",
+				QualificationCategory.CERTIFICATION,
+				LocalDate.of(2023, 1, 1),
+				LocalDate.of(2024, 1, 1),
+				"Nationally recognized certification."
+		);
 
 		// TrainingProgramDto 객체 생성
 		TrainerRequest.TrainingProgramDto trainingProgramDto = new TrainerRequest.TrainingProgramDto(
-			"Beginner Training Program",
-			"A program designed for beginners.",
-			List.of(GoalType.WEIGHT_LOSS, GoalType.BODY_PROFILE)
+				"Beginner Training Program",
+				"A program designed for beginners.",
+				List.of(GoalType.WEIGHT_LOSS, GoalType.BODY_PROFILE)
 		);
 
 		// ScheduleDto 리스트 생성
-		List<TrainerRequest.ScheduleDto> scheduleDtoList = new ArrayList<>();
-		scheduleDtoList.add(new TrainerRequest.ScheduleDto(DayOfWeek.MONDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)));
-		scheduleDtoList.add(
-			new TrainerRequest.ScheduleDto(DayOfWeek.WEDNESDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)));
-		scheduleDtoList.add(new TrainerRequest.ScheduleDto(DayOfWeek.FRIDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)));
+		List<TrainerRequest.ScheduleDto> scheduleDtoList = Arrays.asList(
+				new TrainerRequest.ScheduleDto(DayOfWeek.MONDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
+				new TrainerRequest.ScheduleDto(DayOfWeek.WEDNESDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
+				new TrainerRequest.ScheduleDto(DayOfWeek.FRIDAY, LocalTime.of(9, 0), LocalTime.of(10, 0))
+		);
 
 		// TrainerRequest 객체 생성
 		TrainerRequest request = new TrainerRequest(
-			gymDto,
-			goalTypes,
-			qualificationDtoList,
-			trainingProgramDto,
-			scheduleDtoList,
-			"Passionate trainer with 5 years of experience."
+				gymDto,
+				goalTypes,
+				qualificationDto, // 단일 자격증으로 수정
+				trainingProgramDto,
+				scheduleDtoList,
+				"Passionate trainer with 5 years of experience."
 		);
 
 		Gym gym = request.gymDto().toEntity();
 		List<Goal> goals = request.goalTypesToEntity();
-		List<Qualification> qualificationList = request.qualificationDtoListToEntity();
+		Qualification qualification = request.qualificationDtoToEntity(); // 단일 객체로 처리
 		TrainingProgram trainingProgram = request.trainingProgramDto().toEntity();
 		List<TrainerSchedule> scheduleList = request.scheduleDtoListToEntity();
 		String profileDescription = request.profileDescription();
 
-		qualificationList.forEach(qualification -> {
-			S3Image s3Image = new S3Image("/test", qualification.getContent(), LocalDateTime.now(), 100L,
-				ContentType.IMAGE_PNG.getMimeType());
-			qualification.setImage(s3Image);
-		});
+		// 단일 자격증 객체로 처리
+		S3Image s3Image = new S3Image("/test", qualification.getContent(), LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType());
+		qualification.setImage(s3Image);
 
 		String imageDir = "/test";
 		List<S3Image> imageList = Arrays.asList(
-			new S3Image(imageDir, "/file1", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
-			new S3Image(imageDir, "/file2", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
-			new S3Image(imageDir, "/file3", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
-			new S3Image(imageDir, "/file4", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType())
+				new S3Image(imageDir, "/file1", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
+				new S3Image(imageDir, "/file2", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
+				new S3Image(imageDir, "/file3", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType()),
+				new S3Image(imageDir, "/file4", LocalDateTime.now(), 100L, ContentType.IMAGE_PNG.getMimeType())
 		);
 		trainingProgram.addAllImage(imageList);
 
 		TrainerInfo trainerInfo = new TrainerInfo(user,
-			gym,
-			goals,
-			qualificationList,
-			trainingProgram,
-			scheduleList,
-			profileDescription,
-			Gender.MALE);
+				gym,
+				goals,
+				List.of(qualification), // 단일 자격증 객체를 리스트로 변환하여 전달
+				trainingProgram,
+				scheduleList,
+				profileDescription,
+				Gender.MALE);
 
 		trainerInfoRepository.save(trainerInfo);
 
 		assertThat(userRepository.findAll().size()).isEqualTo(1);
 		assertThat(gymRepository.findAll().size()).isEqualTo(1);
 		assertThat(goalRepository.findAll().size()).isEqualTo(goals.size() + trainingProgram.getGoalList().size());
-		assertThat(qualificationRepository.findAll().size()).isEqualTo(qualificationList.size());
+		assertThat(qualificationRepository.findAll().size()).isEqualTo(1); // 단일 자격증 객체로 수정
 		assertThat(trainingProgramRepository.findAll().size()).isEqualTo(1);
 		assertThat(trainerInfoRepository.findAll().size()).isEqualTo(1);
-		assertThat(s3ImageRepository.findAll().size()).isEqualTo(
-			trainerInfo.getQualificationList().size() + imageList.size());
-
+		assertThat(s3ImageRepository.findAll().size()).isEqualTo(1 + imageList.size()); // 단일 자격증 이미지 포함
 	}
 
 	@Test
 	void findAllByFilters() {
 		// Create and save Member
 		Member user = new Member(
-			"username",
-			"Test User",
-			"testuser@example.com",
-			"Y",
-			"",
-			ProviderType.KAKAO,
-			RoleType.USER,
-			LocalDateTime.now(),
-			LocalDateTime.now()
+				"username",
+				"Test User",
+				"testuser@example.com",
+				"Y",
+				"",
+				ProviderType.KAKAO,
+				RoleType.USER,
+				LocalDateTime.now(),
+				LocalDateTime.now()
 		);
 		userRepository.saveAndFlush(user);
 
@@ -190,50 +177,47 @@ class TrainerInfoRepositoryTest {
 		goalRepository.saveAll(goals);
 
 		// Create and save Qualifications
-		List<Qualification> qualifications = List.of(
-			new Qualification("Certified Personal Trainer", QualificationCategory.CERTIFICATION,
-				LocalDate.of(2023, 1, 1), LocalDate.of(2024, 1, 1), "Nationally recognized certification."),
-			new Qualification("Nutrition Specialist", QualificationCategory.CERTIFICATION, LocalDate.of(2022, 5, 1),
-				LocalDate.of(2023, 5, 1), "Specialized in sports nutrition.")
+		Qualification qualification = new Qualification(
+				"Certified Personal Trainer",
+				QualificationCategory.CERTIFICATION,
+				LocalDate.of(2023, 1, 1),
+				LocalDate.of(2024, 1, 1),
+				"Nationally recognized certification."
 		);
-		qualificationRepository.saveAll(qualifications);
+		qualificationRepository.saveAndFlush(qualification);
 
 		// Create and save Training Program
 		TrainingProgram trainingProgram = new TrainingProgram(
-			"Beginner Training Program",
-			"A program designed for beginners.",
-			Stream.of(GoalType.WEIGHT_LOSS, GoalType.BODY_PROFILE).map(Goal::new)
-				.collect(Collectors.toList())
+				"Beginner Training Program",
+				"A program designed for beginners.",
+				Stream.of(GoalType.WEIGHT_LOSS, GoalType.BODY_PROFILE).map(Goal::new).collect(Collectors.toList())
 		);
 		trainingProgramRepository.saveAndFlush(trainingProgram);
 
 		// Create and save Schedules
-		List<TrainerSchedule> schedules = List.of(
-			new TrainerSchedule(DayOfWeek.MONDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
-			new TrainerSchedule(DayOfWeek.WEDNESDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
-			new TrainerSchedule(DayOfWeek.FRIDAY, LocalTime.of(9, 0), LocalTime.of(10, 0))
+		List<TrainerSchedule> schedules = Arrays.asList(
+				new TrainerSchedule(DayOfWeek.MONDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
+				new TrainerSchedule(DayOfWeek.WEDNESDAY, LocalTime.of(9, 0), LocalTime.of(10, 0)),
+				new TrainerSchedule(DayOfWeek.FRIDAY, LocalTime.of(9, 0), LocalTime.of(10, 0))
 		);
 		trainerScheduleRepository.saveAll(schedules);
 
 		// Create and save TrainerInfo
 		TrainerInfo trainerInfo = new TrainerInfo(
-			user,
-			gym,
-			goals,
-			qualifications,
-			trainingProgram,
-			schedules,
-			"Passionate trainer with 5 years of experience.",
-			Gender.MALE
+				user,
+				gym,
+				goals,
+				List.of(qualification), // 단일 자격증 객체를 리스트로 변환하여 전달
+				trainingProgram,
+				schedules,
+				"Passionate trainer with 5 years of experience.",
+				Gender.MALE
 		);
 		trainerInfoRepository.saveAndFlush(trainerInfo);
 
 		// Test the repository method
 		Pageable pageable = PageRequest.of(0, 10);
-		//		Page<TrainerInfo> result = trainerInfoRepository.findAllByFilters("username", GoalType.WEIGHT_LOSS,
-		//			"test location", pageable);
-		Page<TrainerInfo> result = trainerInfoRepository.findAllByFilters("trainer", null,
-			null, pageable);
+		Page<TrainerInfo> result = trainerInfoRepository.findAllByFilters("trainer", null, null, pageable);
 
 		assertNotNull(result);
 		assertEquals(1, result.getTotalElements());
